add unit test Controller, Repository, Product and  Exception